<resources>
    <string name="app_name">Pregame</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="burger_menu_image">Burger Menu Image</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="logo_description">Pregame Logo</string>
    <string name="basketball_image_description">Basketball Player Image</string>
    <string name="go_to_lp">Go to Landing Page</string>
    <string name="player_rb">Player</string>
    <string name="coach_rb">Coach</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="dob">DOB</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_fees">Fees</string>
    <string name="nav_upload_image">Pictures &amp; Videos</string>
    <string name="nav_upload_docs">Documents</string>
    <string name="nav_team_stats">Team Stats</string>
    <string name="nav_message">Messages</string>
    <string name="nav_record_shooting">Shooting</string>
    <string name="nav_injury_report">Injury Report</string>
    <string name="nav_training_matches">Trainings/Matches</string>
    <string name="nav_team_list">Team List</string>
    <string name="nav_tactics_board">Tactics</string>
    <string name="nav_game_stats">Game Stats</string>
    <string name="schedule">Schedule</string>
    <string name="nav_logout">Logout</string>
    <string name="full_name">Full Name</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="profile_pic_description">Profile Picture for User</string>
    <string name="cover_photo">Update Cover Photo</string>
    <string name="edit_full_name">Edit Full Name</string>
    <string name="edit_phone_number">Edit Phone Number</string>
    <string name="edit">Edit</string>
    <string name="my_teams">My Teams</string>
    <string name="purchase_history">Purchase History</string>
    <string name="list_of_purchases">List of Purchases</string>
    <string name="discount_type">Discount Type</string>
    <string name="total">Total</string>
    <string name="items">Items</string>
    <string name="create_team">Create Team</string>
    <string name="join_team">Join Team</string>
    <string name="team_name">Team Name</string>
    <string name="team_code">Team Code</string>
    <string name="num_of_people">People</string>
    <string name="enter_team_code">Enter Team Code</string>
    <string name="join_team_message_1">Don\'t have one?</string>
    <string name="join_team_message_2">Ask your coach or a teammate</string>
    <string name="teams">Teams</string>
    <string name="add_match">Add Match</string>
    <string name="add_training">Add Training</string>
    <string name="matches">Matches</string>
    <string name="trainings">Trainings</string>
    <string name="match">Match</string>
    <string name="training">Training</string>
    <string name="month">Month</string>
    <string name="day_of_the_week">Day</string>
    <string name="match_title">Match Title</string>
    <string name="training_title">Training Title</string>
    <string name="date">Date</string>
    <string name="opponent_name">Opponent</string>
    <string name="start_time">Start Time</string>
    <string name="meet_time">Meet Time</string>
    <string name="home">Home</string>
    <string name="away">Away</string>
    <string name="location">Location</string>
    <string name="home_or_away">Home or Away</string>
    <string name="status">Status</string>
    <string name="score">Score</string>
    <string name="team_score">Team Score</string>
    <string name="opponent_score">Opponent Score</string>
    <string name="go_back">Go Back</string>
    <string name="edit_details">Edit Details</string>
    <string name="details">Details</string>
    <string name="edit_match_title">Edit Match Title</string>
    <string name="edit_training_title">Edit Training Title</string>
    <string name="edit_match_opponent">Edit Match Opponent</string>
    <string name="edit_match_location">Edit Match Location</string>
    <string name="edit_training_location">Edit Training Location</string>
    <string name="edit_training_details">Edit Training Details</string>
    <string name="edit_home_or_away">Edit Home or Away Status</string>
    <string name="edit_match_score">Edit Match Score</string>
    <string name="datetime">DateTime</string>
    <string name="event_type">Event Type</string>
    <string name="home_team">Home Team</string>
    <string name="away_team">Away Team</string>
    <string name="dash">-</string>
    <string name="match_score">Match Score</string>
    <string name="responses">Responses</string>
    <string name="pending">Pending</string>
    <string name="are_you_go_to_training">Are you go to training?</string>
    <string name="update_match">Update Match</string>
    <string name="won">Won</string>
    <string name="lost">Lost</string>
    <string name="update">Update</string>
    <string name="update_training">Update Training</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="draw">Draw</string>
    <string name="general_stats">General Stats</string>
    <string name="general">General</string>
    <string name="number">0</string>
    <string name="players">Players</string>
    <string name="coaches">Coaches</string>
    <string name="wins">Wins</string>
    <string name="loses">Loses</string>
    <string name="draws">Draws</string>
    <string name="not_played">Haven\'t Played</string>
    <string name="start_new_match">Start Match</string>
    <string name="match_stats">Match Stats</string>
    <string name="end_match">End Match</string>
    <string name="new_match">New Match</string>
    <string name="plus_one">FT</string>
    <string name="plus_two">2pt</string>
    <string name="plus_three">3pt</string>
    <string name="offensive_rebounds">Off Reb</string>
    <string name="defensive_rebounds">Def Reb</string>
    <string name="assist">Assist</string>
    <string name="block">Block</string>
    <string name="turnover">Turnover</string>
    <string name="steal">Steal</string>
    <string name="scr">0</string>
    <string name="foul">Foul</string>
    <string name="my_team">My Team</string>
    <string name="message">Message</string>
    <string name="match_stats_title">Match Stats Title</string>
    <string name="average_points">Average Points</string>
    <string name="points_scored">Points Scored</string>
    <string name="points_against">Points Against</string>
    <string name="total_match_stats">Total Match Stats</string>
    <string name="match_stats_legend">Match Stats Legend</string>
    <string name="points_shorthand">P - Points</string>
    <string name="points_against_shorthand">P/A - Points Against</string>
    <string name="assist_shorthand">Asst - Assist</string>
    <string name="off_reb_shorthand">O/R - Offensive Rebound</string>
    <string name="def_reb_shorthand">D/R - Defensive Rebound</string>
    <string name="block_shorthand">Blk - Block</string>
    <string name="foul_shorthand">F - Foul</string>
    <string name="steal_shorthand">Stl - Steal</string>
    <string name="turnover_shorthand">To - Turnover</string>
    <string name="remaining">Remaining</string>
    <string name="training_breakdown">Training Breakdown</string>
    <string name="match_breakdown">Match Breakdown</string>
    <string name="no_response">No Response</string>
    <string name="average_attendance">Average Attendance (%)</string>
    <string name="select_players_for_the_match">Select Players for the match</string>
    <string name="select_players">Select Players</string>
    <string name="availability">Availability</string>
    <string name="number_of_players_selected">Number of players selected</string>
    <string name="my_team_scores">My Team Scores</string>
    <string name="made">Made</string>
    <string name="missed">Missed</string>
    <string name="opponents_scores">Opponents Scores</string>
    <string name="vs">Vs</string>
    <string name="team_list">Team List</string>
    <string name="made_free_throw">Made Free Throw</string>
    <string name="made_two_point">Made Two Point</string>
    <string name="made_three_point">Made Three Point</string>
    <string name="missed_free_throw">Missed Free Throw</string>
    <string name="missed_two_point">Missed Two Point</string>
    <string name="missed_three_point">Missed Three Point</string>
    <string name="list_of_players">List of Players</string>
    <string name="bullet_point">Bullet Point</string>
    <string name="my_team_shots">My Team Shots</string>
    <string name="taken">Taken</string>
    <string name="free_throw">Free Throw</string>
    <string name="opponents_shots">Opponents Shots</string>
    <string name="my_team_general_stats">My Team General Stats</string>
    <string name="go_to_home_page">Go to Home Page</string>
    <string name="my_team_shot_breakdown">My Team Shot % Breakdown</string>
    <string name="my_team_2pt_shot_breakdown">My Team 2pt Shot Breakdown</string>
    <string name="free_throw_shot_breakdown">Free Throw Shot Breakdown</string>
    <string name="total_stats_for_the_season">Total Stats for the Season</string>
    <string name="close_legend_image_view">Close Legend Image View</string>
    <string name="points_breakdown_for_the_season">Points Breakdown for the Season</string>
    <string name="total_points_scored">Total Points Scored</string>
    <string name="average_points_per_game">Average Points per game</string>
    <string name="total_points_allowed">Total Points Allowed</string>
    <string name="average_points_allowed_per_game">Average Points Allowed per game</string>
    <string name="efficiency_breakdown">Efficiency Breakdown</string>
    <string name="total_possessions">Total Possessions</string>
    <string name="points_per_possession">Points per possession</string>
    <string name="points_allowed_per_possession">Points Allowed per possession</string>
    <string name="possessions_breakdown">Possessions Breakdown</string>
    <string name="offensive_efficiency">Offensive Efficiency</string>
    <string name="defensive_efficiency">Defensive Efficiency</string>
    <string name="average_stats_for_the_season">Average Stats per Game</string>
    <string name="assist_breakdown_for_the_season">Assist Breakdown for the Season</string>
    <string name="possession_breakdown_legend">Possession Breakdown Legend</string>
    <string name="total_possessions_legend">Total Possessions - The total amount of possessions for the season</string>
    <string name="points_per_possession_legend">Points per Possession - The average amount of points scored per possession</string>
    <string name="offensive_efficiency_legend">Offensive Efficiency - How efficient the team is being on the offensive end of the court</string>
    <string name="points_allowed_per_possession_legend">Points Allowed per Possession - The average amount of points allowed per possession</string>
    <string name="defensive_efficiency_legend">Defensive Efficiency - How efficient the team is being on the defensive end of the court</string>
    <string name="offensive_player_image">Offensive Player Image</string>
    <string name="defensive_player_image">Defensive Player Image</string>
    <string name="player_movement_arrow_image">Player Movement Arrow Image</string>
    <string name="player_pass_arrow_image">Player Pass Arrow Image</string>
    <string name="play_menu_image">Play menu image</string>
    <string name="remove_item_from_screen_image">Remove item from screen image</string>
    <string name="add_item_to_screen_image">Add item to screen image</string>
</resources>