<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_cd_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home"
        />
    <item
        android:id="@+id/nav_cd_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile"
        />
    <item
        android:id="@+id/nav_cd_upload_image"
        android:icon="@drawable/ic_image"
        android:title="@string/nav_upload_image"
        />
    <item
        android:id="@+id/nav_cd_upload_docs"
        android:icon="@drawable/ic_folder"
        android:title="@string/nav_upload_docs"
        />
    <item
        android:id="@+id/nav_cd_trainings_matches"
        android:icon="@drawable/ic_calendar_events"
        android:title="@string/nav_training_matches"
        />
    <item
        android:id="@+id/nav_cd_team_list"
        android:icon="@drawable/ic_people"
        android:title="@string/nav_team_list"
        />
    <item
        android:id="@+id/nav_cd_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/nav_logout"
        />
</menu>