<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_pd_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home"
        />
    <item
        android:id="@+id/nav_pd_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile"
        />
    <item
        android:id="@+id/nav_pd_fees"
        android:icon="@drawable/ic_credit_card"
        android:title="@string/nav_fees"
        />
    <item
        android:id="@+id/nav_pd_upload_image"
        android:icon="@drawable/ic_image"
        android:title="@string/nav_upload_image"
        />
    <item
        android:id="@+id/nav_pd_upload_docs"
        android:icon="@drawable/ic_folder"
        android:title="@string/nav_upload_docs"
        />
    <item
        android:id="@+id/nav_pd_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/nav_logout"
        />
</menu>