<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_pb_team_stats"
        android:icon="@drawable/ic_stats"
        android:title="@string/nav_team_stats"
        />
    <item
        android:id="@+id/nav_pb_messages"
        android:icon="@drawable/ic_message"
        android:title="@string/nav_message"
        />
    <item
        android:id="@+id/nav_pb_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home"
        />
    <item
        android:id="@+id/nav_pb_record_shooting"
        android:icon="@drawable/ic_basketball"
        android:title="@string/nav_record_shooting"
        />
    <item
        android:id="@+id/nav_pb_injury_report"
        android:icon="@drawable/ic_injury"
        android:title="@string/nav_injury_report"
        />
</menu>