<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/training_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:text="@string/training_title"
        app:drawableEndCompat="@drawable/ic_edit" />

    <TextView
        android:id="@+id/date_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/date"
        android:layout_margin="20dp"
        app:drawableEndCompat="@drawable/ic_edit"/>

    <TextView
        android:id="@+id/start_time_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/start_time"
        android:layout_margin="20dp"
        app:drawableEndCompat="@drawable/ic_edit"/>

    <TextView
        android:id="@+id/meet_time_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/meet_time"
        android:layout_margin="20dp"
        app:drawableEndCompat="@drawable/ic_edit"/>

    <TextView
        android:id="@+id/location_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/location"
        android:layout_margin="20dp"
        app:drawableEndCompat="@drawable/ic_edit"/>

    <TextView
        android:id="@+id/details_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/details"
        android:layout_margin="20dp"
        app:drawableEndCompat="@drawable/ic_edit"/>

    <Button
        android:id="@+id/go_back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/go_back"
        android:layout_margin="20dp"/>

</LinearLayout>