<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoachesBoard.CoachesBoardFragment"
    android:orientation="vertical"
    android:layout_marginTop="70dp">

    <HorizontalScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:background="@drawable/grey_border">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/hsv_basketball_iv"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/basketball"
                android:background="@drawable/transparent_border"
                android:contentDescription="@string/basketball_image_description"
                android:layout_margin="5dp"/>

            <ImageView
                android:id="@+id/hsv_offensive_player_iv"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/offensive_player"
                android:background="@drawable/transparent_border"
                android:contentDescription="@string/offensive_player_image"
                android:layout_margin="5dp"/>

            <ImageView
                android:id="@+id/hsv_defensive_player_iv"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/defensive_player"
                android:background="@drawable/transparent_border"
                android:contentDescription="@string/defensive_player_image"
                android:layout_margin="5dp"/>

            <ImageView
                android:id="@+id/hsv_player_movement_iv"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_arrow_forward"
                android:background="@drawable/transparent_border"
                android:contentDescription="@string/player_movement_arrow_image"
                android:layout_margin="5dp"/>

            <ImageView
                android:id="@+id/hsv_player_pass_iv"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/dashed_line"
                android:background="@drawable/transparent_border"
                android:contentDescription="@string/player_pass_arrow_image"
                android:layout_margin="5dp"/>

            <ImageView
                android:id="@+id/hsv_remove_item_iv"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/back_arrow_curved"
                android:background="@drawable/transparent_border"
                android:contentDescription="@string/remove_item_from_screen_image"
                android:layout_margin="5dp"/>

            <ImageView
                android:id="@+id/hsv_add_item_iv"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/forward_arrow_curved"
                android:background="@drawable/transparent_border"
                android:contentDescription="@string/add_item_to_screen_image"
                android:layout_margin="5dp"/>

            <ImageView
                android:id="@+id/hsv_play_menu_iv"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_vertical_menu"
                android:background="@drawable/transparent_border"
                android:contentDescription="@string/play_menu_image"
                android:layout_margin="5dp"/>
        </LinearLayout>
    </HorizontalScrollView>

    <RelativeLayout
        android:id="@+id/basketball_court"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/scroll_view"
        android:background="@drawable/basketball_court_full" />

</RelativeLayout>