<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp"
    android:elevation="10dp"
    app:cardCornerRadius="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/possession_breakdown_legend"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:id="@+id/close_legend_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:contentDescription="@string/close_legend_image_view"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:tint="@color/red" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/title"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:baselineAligned="false">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:drawableStartCompat="@drawable/ic_black_circle"
                android:layout_marginTop="10dp"
                android:drawablePadding="10dp"
                android:text="@string/total_possessions_legend"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:drawableStartCompat="@drawable/ic_black_circle"
                android:layout_marginTop="10dp"
                android:drawablePadding="10dp"
                android:text="@string/points_per_possession_legend"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:drawableStartCompat="@drawable/ic_black_circle"
                android:layout_marginTop="10dp"
                android:drawablePadding="10dp"
                android:text="@string/offensive_efficiency_legend"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:drawableStartCompat="@drawable/ic_black_circle"
                android:layout_marginTop="10dp"
                android:drawablePadding="10dp"
                android:text="@string/points_allowed_per_possession_legend"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:drawableStartCompat="@drawable/ic_black_circle"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:drawablePadding="10dp"
                android:text="@string/defensive_efficiency_legend"
                android:textColor="@color/black"
                android:textSize="16sp"/>

        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>